refactor(backend): remove dead single-ID reservation lookup and stale imports
Remove ReservationRepository#findByIdUserIdAndEventId, which became
unreachable once CheckInService switched to the batch lookup, and
drop the now-unused java.util.Optional imports left behind in
CheckInService and its test.